feat: Production deployment improvements and office network setup
- Configure production settings for office environment with PostgreSQL fallback
- Add comprehensive office network access guide with firewall configuration
- Improve DTSearch panel with proper resume details dialog integration
- Update production server startup script with better timing and network info
- Add DTSearchResultDialog component for enhanced user experience
- Fix ResumeCard component to handle DTSearch integration properly
- Update Caddyfile for office network deployment on 192.168.1.2
- Remove problematic null file from repository

Production features:
- Multi-user database optimizations with SQLite WAL mode
- Session management for office users (24-hour sessions)
- Comprehensive logging with rotation
- Security headers and firewall configurations
- Network access documentation for IT administrators
- Browser compatibility guide for office users

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,8 +1,8 @@
 # Caddyfile for Windows production deployment
-# Place this file in the same directory as Caddy executable
+# Configured for office network access on 192.168.1.2
 
-# Main application server
-{$DOMAIN:localhost:8080} {
+# Main application server - accessible from office network
+:8080 {
     # Django API routes (highest priority)
     handle /api/* {
         reverse_proxy localhost:8000
