security: Add sensitive data files to .gitignore
- Excluded backend/data_backup.json (contains password hashes and credentials)
- Excluded backup and dump files (*.backup, *.dump, *.sql)
- Excluded credential directories
- Prevented accidental commits of sensitive deployment files

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,14 @@ elasticsearch-7.17.0/
 DEPLOYMENT_CHECKLIST.md
 .env*
 *.env
+
+# Sensitive Data & Backups
+backend/data_backup.json
+*.backup
+*.dump
+*.sql
+database_exports/
+credentials/
+secrets/
+.credentials
+DEPLOYMENT_CHECKLIST.md
